test commit HELL
Piotr

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>hello</app-root>
+  <app-root>hell</app-root>
 </body>
 </html>
